<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StudyTime</string>
    
    <!-- Bottom Navigation -->
    <string name="nav_timer">Timer</string>
    <string name="nav_history">History</string>
    <string name="nav_stats">Stats</string>
    <string name="nav_settings">Settings</string>
    
    <!-- Timer Screen -->
    <string name="focus_mode">Focus Mode</string>
    <string name="break_mode">Break Mode</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="focus_duration">Focus Duration</string>
    <string name="break_duration">Break Duration</string>
    <string name="session_count">Sessions</string>
    <string name="minutes_short">min</string>
    
    <!-- Session Types -->
    <string name="pomodoro">Pomodoro</string>
    <string name="short_break">Short Break</string>
    <string name="long_break">Long Break</string>
    <string name="custom">Custom</string>
    
    <!-- History -->
    <string name="session_history">Session History</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This Week</string>
    <string name="no_sessions_yet">No sessions yet</string>
    <string name="start_your_first_session">Start your first session to see it here</string>
    
    <!-- Statistics -->
    <string name="statistics">Statistics</string>
    <string name="total_time">Total Time</string>
    <string name="sessions_completed">Sessions</string>
    <string name="average_duration">Avg Duration</string>
    <string name="focus_time_today">Focus Time Today</string>
    <string name="productivity_score">Productivity</string>
    <string name="total_focus_time">Total Focus Time</string>
    <string name="average_session">Average Session</string>
    <string name="total_distractions">Total Distractions</string>
    
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="timer_settings">Timer Settings</string>
    <string name="notifications">Notifications</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="auto_start_break">Auto-start Break</string>
    <string name="auto_start_focus">Auto-start Focus</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    
    <!-- Dialogs -->
    <string name="are_you_sure">Are you sure?</string>
    <string name="stop_session_msg">Do you want to stop this session?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    
    <!-- Time formats -->
    <string name="hours_format">%dh</string>
    <string name="minutes_format">%dm</string>
    <string name="seconds_format">%ds</string>
</resources>
